test/domains/vass/assoc-idxtype-error-1.good
assoc-idxtype-error-1.chpl:24: error: Values of 'domain' type do not support hash functions yet, so cannot be used as an associative domain's index type
